--- a/styles.css
+++ b/styles.css
@@ -9,7 +9,14 @@ h1 {
 }
 
 table, th, td {
-    background-color: #F0F8FF;
     border: 1px solid black;
     width: 100%;
+}
+
+.done {
+    background-color: #ffffff18;
+}
+
+.not-done{
+    background-color: #F0F8FF;
 }
